Fix Modbus timeout on Windows.

Use a properly set or calculated value, do not sporadically
calculate it inside a sending function. The only place the
caluculation shall happen is in setupEnvironment().

Task-number: QTBUG-53767
Change-Id: Id40fd3406bee404b9d44c8ad43a5160622eda2de
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>